Add client-side code

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT = 5500
 
-DB_connect = mongodb+srv://mrooze12:e9IXHzLH5S8MCypv@mern-stack.9jr6nhh.mongodb.net/?retryWrites=true&w=majority
+# DB_connect = mongodb+srv://mrooze12:e9IXHzLH5S8MCypv@mern-stack.9jr6nhh.mongodb.net/?retryWrites=true&w=majority
+DB_connect = mongodb+srv://mrooze12:e9IXHzLH5S8MCypv@mern-cluster.bp45nux.mongodb.net/?retryWrites=true&w=majority
